--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="./src/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>고궁의밤</title>
   </head>
