--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="./src/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
