--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
     <link rel="icon" type="image/png" href="/favicon.png" />
