--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>고궁의밤</title>
   </head>
